_generated-doc/3.15/config/quarkus-core_quarkus.config.adoc
:summaryTableId: quarkus-core_quarkus-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a| [[quarkus-core_quarkus-profile]] [.property-path]##link:#quarkus-core_quarkus-profile[`quarkus.profile`]##

[.description]
--
A comma separated list of profiles that will be active when Quarkus launches.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PROFILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PROFILE+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-core_quarkus-config-profile-parent]] [.property-path]##link:#quarkus-core_quarkus-config-profile-parent[`quarkus.config.profile.parent`]##

[.description]
--
Accepts a single configuration profile name. If a configuration property cannot be found in the current active profile, the config performs the same lookup in the profile set by this configuration.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONFIG_PROFILE_PARENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONFIG_PROFILE_PARENT+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-config-locations]] [.property-path]##link:#quarkus-core_quarkus-config-locations[`quarkus.config.locations`]##

[.description]
--
Additional config locations to be loaded with the Config. The configuration support multiple locations separated by a comma and each must represent a valid `java.net.URI`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONFIG_LOCATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONFIG_LOCATIONS+++`
endif::add-copy-button-to-env-var[]
--
|list of link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/net/URI.html[URI]
|

a| [[quarkus-core_quarkus-config-mapping-validate-unknown]] [.property-path]##link:#quarkus-core_quarkus-config-mapping-validate-unknown[`quarkus.config.mapping.validate-unknown`]##

[.description]
--
Validates that a `@ConfigMapping` maps every available configuration name contained in the mapping prefix.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONFIG_MAPPING_VALIDATE_UNKNOWN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONFIG_MAPPING_VALIDATE_UNKNOWN+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-core_quarkus-config-log-values]] [.property-path]##link:#quarkus-core_quarkus-config-log-values[`quarkus.config.log.values`]##

[.description]
--
Enable logging of configuration values lookup in DEBUG log level.  +
The log of configuration values require the category set to `DEBUG` in the `io.smallrye.config` category: `quarkus.log.category."io.smallrye.config".level=DEBUG`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONFIG_LOG_VALUES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONFIG_LOG_VALUES+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-core_quarkus-uuid]] [.property-path]##link:#quarkus-core_quarkus-uuid[`quarkus.uuid`]##

[.description]
--
A property that allows accessing a generated UUID. It generates that UUID at startup time. So it changes between two starts including in dev mode.  +
Access this generated UUID using expressions: `$++{++quarkus.uuid++}++`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_UUID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_UUID+++`
endif::add-copy-button-to-env-var[]
--
|string
|

|===


:!summaryTableId: