_generated-doc/3.27/config/quarkus-core_quarkus.config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-config-sources-system-only]] [.property-path]##link:#quarkus-core_quarkus-config-sources-system-only[`quarkus.config.sources.system-only`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.config.sources.system-only+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set this to `true` to read configuration from system properties and environment variables only. This only applies to runtime.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONFIG_SOURCES_SYSTEM_ONLY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONFIG_SOURCES_SYSTEM_ONLY+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-core_quarkus-profile]] [.property-path]##link:#quarkus-core_quarkus-profile[`quarkus.profile`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.profile+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
A comma separated list of profiles that will be active when Quarkus launches.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PROFILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PROFILE+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-core_quarkus-config-profile-parent]] [.property-path]##link:#quarkus-core_quarkus-config-profile-parent[`quarkus.config.profile.parent`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.config.profile.parent+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Accepts a single configuration profile name. If a configuration property cannot be found in the current active profile, the config performs the same lookup in the profile set by this configuration.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONFIG_PROFILE_PARENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONFIG_PROFILE_PARENT+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-config-locations]] [.property-path]##link:#quarkus-core_quarkus-config-locations[`quarkus.config.locations`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.config.locations+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Additional config locations to be loaded with the Config. The configuration support multiple locations separated by a comma and each must represent a valid `java.net.URI`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONFIG_LOCATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONFIG_LOCATIONS+++`
endif::add-copy-button-to-env-var[]
--
|list of link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/net/URI.html[URI]
|

a| [[quarkus-core_quarkus-config-mapping-validate-unknown]] [.property-path]##link:#quarkus-core_quarkus-config-mapping-validate-unknown[`quarkus.config.mapping.validate-unknown`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.config.mapping.validate-unknown+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Validates that a `@ConfigMapping` maps every available configuration name contained in the mapping prefix.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONFIG_MAPPING_VALIDATE_UNKNOWN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONFIG_MAPPING_VALIDATE_UNKNOWN+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-core_quarkus-config-log-values]] [.property-path]##link:#quarkus-core_quarkus-config-log-values[`quarkus.config.log.values`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.config.log.values+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable logging of configuration values lookup in DEBUG log level.  +
The log of configuration values require the category set to `DEBUG` in the `io.smallrye.config` category: `quarkus.log.category."io.smallrye.config".level=DEBUG`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONFIG_LOG_VALUES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONFIG_LOG_VALUES+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-core_quarkus-config-build-time-mismatch-at-runtime]] [.property-path]##link:#quarkus-core_quarkus-config-build-time-mismatch-at-runtime[`quarkus.config.build-time-mismatch-at-runtime`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.config.build-time-mismatch-at-runtime+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
What should happen if the application is started with a different build time configuration than it was compiled against. This may be useful to prevent misconfiguration.

If this is set to `warn` the application will warn at start up.

If this is set to `fail` the application will fail at start up.

Native tests leveraging`@io.quarkus.test.junit.TestProfile` are always run with `quarkus.config.build-time-mismatch-at-runtime = fail`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONFIG_BUILD_TIME_MISMATCH_AT_RUNTIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONFIG_BUILD_TIME_MISMATCH_AT_RUNTIME+++`
endif::add-copy-button-to-env-var[]
--
a|`warn`, `fail`
|`+++warn+++`

|===

